# python-resource-inventory

./: .gitignore  LICENSE  LINK.md  OLD_README.md  README.md  pyproject.toml
01 Advanced Python/: currinyg.py  list_comprehension .py
02 Basic Python/: desempacotamento.py
Advanced Python/: generators_and_iterators.py  iterators_and_iterables.py  recursive_function.py  times_and_temperatures.txt
Ambient Study Tests/: .env  README.md  environ_test.py  getenv_test.py  pyproject.toml  splash_screen.py
Awesome Python/: CONTRIBUTING.md  LICENSE  README.md
Code Tests/: pseudo_random_number_generators.py
Code Tests/Oriented_Objects/: aula01.py
Code Tests/args_and_kwargs/: concatenate.py  concatenate_keys.py  extract_list_body.py  function_definition.py  merging_dicts.py  merging_lists.py  print_list.py  simple.py  sum_integers_args.py  sum_integers_list.py
Code Tests/async/: Pipfile  README.md  join.py  producer_consumer.py  requeriments.txt  requirements.txt  test.py  tornado.py
Code Tests/data_multiprocess/: tutorial.txt
Code Tests/deepdiff/: example.py
Code Tests/design_patterns/: study.md
Code Tests/django/: README.md
Code Tests/django-blog/: .gitignore  README.md
Code Tests/fast-api-to-do/: .dockerignore  .env  Dockerfile  Pipfile  README.md  docker-compose.yml  requirements.txt  start_server.py
Code Tests/fast_api/: .env  .gitignore  Insomnia_2020-08-04.json  Pipfile  README.md  docker-compose.yml
Code Tests/flasgger/: code.py
Code Tests/flask_note/: .gitignore  Dockerfile  Insomnia_routes_test_normal.json  Pipfile  Procfile  main.py  (+7 more)
Code Tests/pdm/: Test.md  pyproject.toml
Course Python 3 from Basic to Advanced/: README.md
Course Python Project/: Dicas em Python.txt
Cybersec/: README.md
Dataclasses/: README.md  example_1_namedtuple.py  example_2_namedtuple.py  example_3_value_object.py  example_4_value_object_dunders.py  example_5_dataclasses.py  example_6_dataclasses_field.py  example_7_dataclasses_convert.py  pyproject.toml
Object Oriented Programming/: atributes.py  data_abstraction_and_data_encapsulation_and_information_hiding.py  methods.py
Python Annotations/: LINTERS.md  PYTHON WEB.md
Regular Expressions/: regex.py  regex_wttd.py
Tests/: README.md  pyproject.toml
Tests/code_board/: app.py
Tests/code_game/: mygame.py
Tests/reports/: report.xml
Tests/tests/: conftest.py  test_fixtures.py  test_game.py  test_game_fixtures_and_factory_boy_.py  test_pytest.py
Type Hints/: README.md  example_1.py  example_2.py  example_3.py  example_4.py  function_annotations.py  monkeytype.sqlite3  my_lib.py  my_lib.pyi  pyproject.toml  stub.pyi
docs/: README.md  python_gist.md
pacote-desafios-pythonicos-master/: 01_donuts.py  02_both_ends.py  03_fix_start.py  04_mix_up.py  05_verbing.py  06_not_bad.py  07_front_back.py  08_match_ends.py  09_front_x.py  10_sort_last.py  11_remove_adjacent.py  12_linear_merge.py  13_wordcount.py  14_mimic.py
src/: README.md
(+432 files in other folders)
