[tool.poetry]
name = "type hints"
version = "0.1.0"
description = ""
authors = ["Bruno Alves Comitre <bruno-comitre@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.942"
MonkeyType = "^22.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
