[project]
name = "Elwood"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno Alves Comitre", email = "bruno.alves@berghem.com.br"},
]
dependencies = [
    "requests~=2.26",
    "flask~=2.0",
    "Flask-Admin~=1.5",
    "Flask-Bcrypt~=0.7",
    "Flask-DebugToolbar-Mongo~=0.1",
    "psycopg2-binary~=2.9",
]
requires-python = ">=3.10"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pyflakes~=2.4",
    "pytest~=6.2",
]
